plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}



group = 'com.griddynamics.internship'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '18'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation('org.flywaydb:flyway-core')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('mysql:mysql-connector-java')
	implementation('org.flywaydb:flyway-mysql')
	implementation('org.springframework.boot:spring-boot-starter-security:2.7.1')
	implementation('org.springdoc:springdoc-openapi-ui:1.6.9')
	implementation('org.springframework.boot:spring-boot-starter-validation')
	implementation('io.jsonwebtoken:jjwt:0.9.1')

	compileOnly('org.projectlombok:lombok:1.18.24')
	annotationProcessor('org.projectlombok:lombok:1.18.24')

	testImplementation("org.hamcrest:hamcrest-core:2.2")
	testImplementation('org.springframework.boot:spring-boot-starter-test')
}



tasks.named('test') {
	useJUnitPlatform()
}
